primera app con angular

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: rgb(229, 244, 253);
+}
+
+h1 {
+  color: rgb(211, 24, 24);
+  text-align: center;
+}
+
+h2, h3, h4, h5, h6 {
+  color:rgb(90, 55, 187);
+  text-align: justify;
+}
