--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div class="card-group">
   <div class="card">
     <img src="/assets/image1.webp" class="card-img-top" alt="...">
-    <div class="card-body">
+    <div class="card-body text-white bg-dark">
       <h5 class="card-title">Lotte World Tower Seúl República De Corea Corea</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 
@@ -12,7 +12,7 @@
   </div>
   <div class="card">
     <img src="/assets/image2.jpeg" class="card-img-top" alt="...">
-    <div class="card-body">
+    <div class="card-body text-white bg-dark">
       <h5 class="card-title">Paisajes</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
 
@@ -20,7 +20,7 @@
   </div>
   <div class="card">
     <img src="/assets/image3.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
+    <div class="card-body text-white bg-dark">
       <h5 class="card-title">Montañas</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
 
@@ -30,3 +30,4 @@
 <br>
 <br>
 <app-tabla-precio></app-tabla-precio>
+<app-comp-footer></app-comp-footer>
