--- a/src/app/tabla-precio/tabla-precio.component.html
+++ b/src/app/tabla-precio/tabla-precio.component.html
@@ -1,6 +1,35 @@
 <h1>Lista de Precios</h1>
-<table class="table-dark">
-  <tr class="table-warning">...</tr>
-  <tr class="table-warning">...</tr>
-  <tr class="table-warning">...</tr>
+
+<div class="col-md-6">
+<table class="table table-striped table-hover table-bordered " id="tabla">
+  <thead>
+    <tr >
+      <th colspan="4">#</th>
+      <th colspan="4">Lugar</th>
+      <th colspan="4">Precio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th colspan="4">1</th>
+      <td colspan="4">Seúl República De Corea Corea</td>
+      <td>USD 5000</td>
+
+    </tr>
+    <tr>
+      <th colspan="4">2</th>
+      <td colspan="4">Paisajes</td>
+      <td colspan="4">USD 4000</td>
+
+    </tr>
+    <tr>
+      <th colspan="4">2</th>
+      <td colspan="4">Montañas</td>
+      <td colspan="4">UDS 2000</td>
+
+    </tr>
+
+
+  </tbody>
 </table>
+</div>
