--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,16 @@
 body {
-  background-color: rgb(229, 244, 253);
+
+  background-color: rgb(247, 240, 235);
 }
 
 h1 {
+  font-family: Bebas Neue;
   color: rgb(211, 24, 24);
   text-align: center;
 }
 
 h2, h3, h4, h5, h6 {
+  font-family: Bebas Neue;
   color:rgb(90, 55, 187);
   text-align: justify;
 }
