--- a/src/app/tabla-precio/tabla-precio.component.html
+++ b/src/app/tabla-precio/tabla-precio.component.html
@@ -13,19 +13,19 @@
     <tr>
       <th colspan="4">1</th>
       <td colspan="4">Seúl República De Corea Corea</td>
-      <td>USD 5000</td>
+      <td>{{ 5000 | currency:'USD' }}</td>
 
     </tr>
     <tr>
       <th colspan="4">2</th>
       <td colspan="4">Paisajes</td>
-      <td colspan="4">USD 4000</td>
+      <td colspan="4">{{ 4000 | currency:'USD' }}</td>
 
     </tr>
     <tr>
       <th colspan="4">2</th>
       <td colspan="4">Montañas</td>
-      <td colspan="4">UDS 2000</td>
+      <td colspan="4">{{ 3000 | currency:'USD' }}</td>
 
     </tr>
 
